--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
+  intl: ^0.17.0
+  http: ^0.13.5
+  flutter_load_kit: ^0.0.2
 
 dev_dependencies:
   flutter_test:
