--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   intl: ^0.17.0
   http: ^0.13.5
   flutter_load_kit: ^0.0.2
+  provider: ^6.0.5
+  animated_text_kit: ^4.2.2
+  text_to_speech: ^0.2.3
 
 dev_dependencies:
   flutter_test:
