--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   intl: ^0.17.0
   http: ^0.13.5
@@ -42,6 +41,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   text_to_speech: ^0.2.3
   flutter_dotenv: ^5.0.2
+  path_provider: ^2.0.14
+  flutter_file_dialog: ^3.0.0
 
 dev_dependencies:
   flutter_test:
