--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   path_provider: ^2.0.14
   flutter_file_dialog: ^3.0.0
+  file_picker: ^5.3.0
 
 dev_dependencies:
   flutter_test:
